--- a/appz.yml
+++ b/appz.yml
@@ -1,17 +1,17 @@
 app:
     name: prometheus
     code: prometheus
-    notify: appzdev@cloudbourne.com
+    notify: aramanan@ecloud.com
 
 build:
     version: 2.17
-    env: DEV
+    env: PROD
     build_file: none
     output_files: output/*.zip
     image_template: prometheus-2.45
 
 deploy:
-    context: alpha/DEV
+    context: alpha/PROD
     type: statefulset
     replicas: 1
     port:
