--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -3,7 +3,7 @@ global:
   scrape_interval: 15s
   evaluation_interval: 15s
   external_labels:
-    datacenter: primary
+    datacenter: akamai
 alerting:
   alertmanagers:
     - static_configs:
@@ -32,7 +32,7 @@ scrape_configs:
         - 'alpha-prod-prometheus-2-45.acebaef3.lowtouch.cloud:443'
   - job_name: 'node-exporter'
     static_configs:
-    - targets: ['10.0.2.3:9100','10.0.1.2:9100','192.168.149.106:9100','192.168.131.98:9100']
+    - targets: ['10.0.2.3:9100','10.0.1.2:9100']
     metric_relabel_configs:
       - source_labels: ['nodename']
         regex: '(engine.master)'
