--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -30,7 +30,10 @@ scrape_configs:
 
   - job_name: 'node-exporter'
     static_configs:
-      - targets: ['10.0.8.68:9100', '10.0.137.203:9100', '10.0.141.234:9100']
+      - targets:
+          - '10.0.8.68:9100'
+          - '10.0.137.203:9100'
+          - '10.0.141.234:9100'
     metric_relabel_configs:
       - source_labels: ['nodename']
         regex: '(qa.master)'
@@ -69,7 +72,7 @@ scrape_configs:
       module: [http_2xx]
     static_configs:
       - targets:
-         - https://sranjan1995-dev-graylog-5-2.1276c99e.lowtouch.cloud
+          - https://sranjan1995-dev-graylog-5-2.1276c99e.lowtouch.cloud
     relabel_configs:
       - source_labels: [__address__]
         target_label: __param_target
@@ -108,7 +111,8 @@ scrape_configs:
 
   - job_name: 'postgresql'
     static_configs:
-      - targets: ['10.152.183.153:9187']  # No leading space
+      - targets: ['10.152.183.153:9187']
     metrics_path: /metrics
+
 
 
