--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -85,4 +85,4 @@ scrape_configs:
   - job_name: 'axonserver_custom'
     static_configs:
     - targets: ['axon-server-24-01.cloudorbit-prod:8000']
-    metrics_path: '/actuator/prometheus/metrics'  
+    metrics_path: '/metrics'  
