--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -18,6 +18,16 @@ scrape_configs:
   - job_name: 'prometheus'
     static_configs:
     - targets: ['localhost:9090']
+  # Federation block
+  - job_name: 'federation'
+    scrape_interval: 5s
+    scrape_timeout: 5s
+    scheme: https
+    metrics_path: /federate
+    honor_labels: true
+    params:
+      match[]:
+        - '{job=~"kube-state-metrics|kubernetes-cadvisor|mongodb_exporter|node-exporter|axonserver"}'    
   - job_name: 'node-exporter'
     static_configs:
     - targets: ['192.168.131.98:9100','192.168.149.106:9100']
