--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -70,7 +70,7 @@ scrape_configs:
   - job_name: 'blackbox'
     metrics_path: /probe
     params:
-     module: [http]
+     module: [http_2xx]
     static_configs:
     - targets:
        - https://website-test.lowtouchcloud.io/
