--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -119,6 +119,14 @@ scrape_configs:
     static_configs:
       - targets: ['10.152.183.153:9187']
     metrics_path: /metrics
+    
+  - job_name: 'postgres'
+
+    # metrics_path defaults to '/metrics'
+    # scheme defaults to 'http'.
+
+    static_configs:
+    - targets: ['postgres-master-13-3:8006']
 
 
 
