--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -19,7 +19,7 @@ scrape_configs:
   
   - job_name: 'node-exporter'
     static_configs:
-    - targets: ['172.16.1.10:9100', '172.16.4.194:9100', '172.16.5.67:9100', '172.16.6.55:9100']
+    - targets: ['10.0.0.2:9100', '10.0.1.2:9100', '10.0.1.3:9100']
     metric_relabel_configs:
       - source_labels: ['nodename']
         regex: '(engine.master)'
@@ -51,9 +51,6 @@ scrape_configs:
       target_label: __metrics_path__
       replacement: /api/v1/nodes/${1}/proxy/metrics/cadvisor
 
-  - job_name: 'postgresql'
-    static_configs:
-    - targets: ['10.152.183.153:9187']
-    metrics_path: /metrics
+
 
  
