--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -34,7 +34,7 @@ scrape_configs:
   
   - job_name: 'node-exporter'
     static_configs:
-    - targets: ['10.0.1.2:9100', '10.0.2.2:9100', '172.234.3.154:9100']
+    - targets: ['10.0.1.2:9100', '10.0.2.2:9100', '192.168.148.48:9100', '192.168.132.65:9100', '192.168.195.31:9100', '192.168.196.206:9100', '192.168.195.98:9100']
     metric_relabel_configs:
       - source_labels: ['nodename']
         regex: '(engine.master)'
