--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -96,9 +96,7 @@ scrape_configs:
   
   - job_name: 'kube-state-metrics'
     static_configs:
-    - targets: 
-        - 'kube-state-metrics.kube-system.svc.cluster.local:8080'
-        - 'kube-state-metrics.kube-system.svc.alpha-poc.local:8080'
+    - targets: ['kube-state-metrics.kube-system.svc.cluster.local:8080']
 
   - job_name: 'kubernetes-cadvisor'
     scheme: https
