--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -34,7 +34,7 @@ scrape_configs:
   
   - job_name: 'node-exporter'
     static_configs:
-    - targets: ['10.0.2.2:9100', '10.0.1.2:9100', '23.239.11.221:9100', '45.56.110.158:9100', '23.92.22.28:9100', '50.116.54.235:9100', '45.56.110.157:9100', '172.104.9.7:9100', '172.104.9.43:9100', '172.104.9.9:9100', '66.175.214.162:9100', '45.79.185.151:9100', '198.74.57.170:9100', '45.33.83.95:9100' ]
+    - targets: ['10.0.2.2:9100', '10.0.1.2:9100', '45.56.105.142:9100', '45.56.110.158:9100', '50.116.52.74:9100', '23.92.22.28:9100', '50.116.54.235:9100', '45.56.110.157:9100', '66.228.46.86:9100', '172.104.9.7:9100', '172.104.9.43:9100', '172.104.9.9:9100', '45.79.185.151:9100', '198.74.57.170:9100', '45.33.83.95:9100', '192.155.89.154:9100', '66.228.47.173:9100', '172.104.30.238:9100', '66.228.37.236:9100', '97.107.142.108:9100']
     metric_relabel_configs:
       - source_labels: ['nodename']
         regex: '(engine.master)'
@@ -45,7 +45,7 @@ scrape_configs:
         target_label: nodename
         replacement: cloudorbit-${1}
       - source_labels: ['nodename']
-        regex: 'lke415125-625416-0dea598d0000'
+        regex: 'lke415125-625416-1f72822e0000'
         target_label: nodename
         replacement: poc-worker-1
       - source_labels: ['nodename']
@@ -53,47 +53,70 @@ scrape_configs:
         target_label: nodename
         replacement: poc-worker-2
       - source_labels: ['nodename']
-        regex: 'lke415125-625416-3c0f0b4f0000'
+        regex: 'lke415125-625416-354e140f0000'
         target_label: nodename
         replacement: poc-worker-3
       - source_labels: ['nodename']
-        regex: 'lke415125-625416-3e159e4e0000'
+        regex: 'lke415125-625416-3c0f0b4f0000'
         target_label: nodename
         replacement: poc-worker-4
       - source_labels: ['nodename']
-        regex: 'lke415125-625416-43338bb50000'
+        regex: 'lke415125-625416-3e159e4e0000'
         target_label: nodename
         replacement: poc-worker-5
       - source_labels: ['nodename']
-        regex: 'lke415125-633537-22395f250000'
+        regex: 'lke415125-625416-43338bb50000'
         target_label: nodename
         replacement: poc-worker-6
       - source_labels: ['nodename']
-        regex: 'lke415125-633537-4aa6830d0000'
+        regex: 'lke415125-625416-62d2036b0000'
         target_label: nodename
         replacement: poc-worker-7
       - source_labels: ['nodename']
-        regex: 'lke415125-633537-5e3bd6120000'
+        regex: 'lke415125-633537-22395f250000'
         target_label: nodename
         replacement: poc-worker-8
       - source_labels: ['nodename']
-        regex: 'lke415125-650491-02f85d070000'
+        regex: 'lke415125-633537-4aa6830d0000'
         target_label: nodename
         replacement: poc-worker-9
       - source_labels: ['nodename']
-        regex: 'lke415125-650491-0cdc53a00000'
+        regex: 'lke415125-633537-5e3bd6120000'
         target_label: nodename
         replacement: poc-worker-10
       - source_labels: ['nodename']
-        regex: 'lke415125-650491-124a48e20000'
+        regex: 'lke415125-650491-0cdc53a00000'
         target_label: nodename
         replacement: poc-worker-11
       - source_labels: ['nodename']
-        regex: 'lke415125-650491-45b4ea2c0000'
+        regex: 'lke415125-650491-124a48e20000'
         target_label: nodename
         replacement: poc-worker-12
-
-  
+      - source_labels: ['nodename']
+        regex: 'lke415125-650491-45b4ea2c0000'
+        target_label: nodename
+        replacement: poc-worker-13
+      - source_labels: ['nodename']
+        regex: 'lke415125-650491-588641760000'
+        target_label: nodename
+        replacement: poc-worker-14
+        - source_labels: ['nodename']
+        regex: 'lke415125-672554-3ff250430000'
+        target_label: nodename
+        replacement: poc-worker-15
+      - source_labels: ['nodename']
+        regex: 'lke415125-672554-65196e680000'
+        target_label: nodename
+        replacement: poc-worker-16
+      - source_labels: ['nodename']
+        regex: 'lke415125-682344-2a873e030000'
+        target_label: nodename
+        replacement: poc-worker-17
+      - source_labels: ['nodename']
+        regex: 'lke415125-682431-3c29ffb00000'
+        target_label: nodename
+        replacement: poc-worker-18
+        
   - job_name: 'kube-state-metrics'
     static_configs:
     - targets: ['kube-state-metrics.kube-system.svc.cluster.local:8080']
