--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -33,6 +33,13 @@ scrape_configs:
   - job_name: 'kube-state-metrics'
     static_configs:
     - targets: ['kube-state-metrics.kube-system.svc.cluster.local:8080']
+    
+  - job_name: 'windows_server'
+    metrics_path: /metrics
+    static_configs:
+    - targets: ['65.2.168.89:9182']
+        labels:
+          instance: 'windows-server'
 
   - job_name: 'kubernetes-cadvisor'
     scheme: https
