--- a/appz.yml
+++ b/appz.yml
@@ -1,17 +1,17 @@
 app:
     name: prometheus
     code: prometheus
-    notify: appzdev@cloudbourne.co
+    notify: srswain@ecloudcontrol.com
 
 build:
     version: 3.0
-    env: DEV
+    env: poc
     build_file: none
     output_files: output/*.zip
     image_template: prometheus-3.0
 
 deploy:
-    context: alpha/DEV
+    context: alpha/POC
     type: statefulset
     replicas: 1
     port:
@@ -22,6 +22,6 @@ volumes:
     mount: /appz/data
     name: data
     size: 50Gi
-  
+    matchLabels: false
 properties:
-    revision: 22
+    revision: 00
