--- a/appz.yml
+++ b/appz.yml
@@ -5,7 +5,7 @@ app:
 
 build:
     version: 3.0
-    env: poc
+    env: POC
     build_file: none
     output_files: output/*.zip
     image_template: prometheus-3.0
