--- a/appz.yml
+++ b/appz.yml
@@ -4,14 +4,14 @@ app:
     notify: appzdev@cloudbourne.com
 
 build:
-    version: 2.17
+    version: 3.0
     env: DEV
     build_file: none
     output_files: output/*.zip
-    image_template: prometheus-2.45
+    image_template: prometheus-3.0
 
 deploy:
-    context: alpha/DEV
+    context: alpha/PROD
     type: statefulset
     replicas: 1
     port:
@@ -26,5 +26,5 @@ volumes:
     
   
 properties:
-    revision : 96
+    revision : 1
     
