--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -1,18 +1,52 @@
-# my global config
 global:
-  scrape_interval:     15s # Set the scrape interval to every 15 seconds. Default is every 1 minute.
-  evaluation_interval: 15s # Evaluate rules every 15 seconds. The default is every 1 minute.
-  # scrape_timeout is set to the global default (10s).
+  scrape_interval: 15s
+  evaluation_interval: 15s
 
-# Alertmanager configuration
 alerting:
   alertmanagers:
   - static_configs:
     - targets:
-       - alert-manager-0-2:9093
+       - alert-manager-0-27:9093
 
-# Load rules once and periodically evaluate them according to the global 'evaluation_interval'.
 rule_files:
-   - /opt/bitnami/prometheus/conf/rules.yaml 
+   - /opt/bitnami/prometheus/conf/rules.yaml
    - /opt/bitnami/prometheus/conf/alerts.yaml
 
+scrape_configs:
+  - job_name: 'prometheus'
+    static_configs:
+    - targets: ['localhost:9090']
+  
+  - job_name: 'node-exporter'
+    static_configs:
+    - targets: ['192.168.144.204:9100', '192.168.144.198:9100', '192.168.144.151:9100']
+    metric_relabel_configs:
+      - source_labels: ['nodename']
+        regex: '(engine.master)'
+        target_label: nodename
+        replacement: appz-${1}
+      - source_labels: ['nodename']
+        regex: 'k8s.worker.node.(.*)'
+        target_label: nodename
+        replacement: appz-dev-worker-${1}
+  
+  - job_name: 'kube-state-metrics'
+    static_configs:
+    - targets: ['kube-state-metrics.kube-system.svc.cluster.local:8080']
+    
+  - job_name: 'kubernetes-cadvisor'
+    scheme: https
+    tls_config:
+      ca_file: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
+    bearer_token_file: /var/run/secrets/kubernetes.io/serviceaccount/token
+    kubernetes_sd_configs:
+    - role: node
+    relabel_configs:
+    - action: labelmap
+      regex: __meta_kubernetes_node_label_(.+)
+    - target_label: __address__
+      replacement: kubernetes.default.svc:443
+    - source_labels: [__meta_kubernetes_node_name]
+      regex: (.+)
+      target_label: __metrics_path__
+      replacement: /api/v1/nodes/${1}/proxy/metrics/cadvisor
