--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -30,11 +30,7 @@ scrape_configs:
 
   - job_name: 'node-exporter'
     static_configs:
-      - targets:
-          - '10.0.1.2:9100'
-          - '192.168.151.133:9100'
-          - '192.168.143.49:9100'
-          - '192.168.151.120:9100'
+    - targets: [ '10.0.1.2:9100', '172.236.205.176:9100', '172.236.220.225:9100', '172.236.205.174:9100']
     metric_relabel_configs:
       - source_labels: ['nodename']
         regex: '(qa.master)'
