--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -19,7 +19,7 @@ scrape_configs:
   
   - job_name: 'node-exporter'
     static_configs:
-    - targets: ['192.168.144.204:9100', '192.168.144.198:9100', '192.168.144.151:9100']
+    - targets: ['192.168.144.204:9100', '192.168.144.198:9100', '192.168.144.151:9100', '192.168.1.5:9100']
     metric_relabel_configs:
       - source_labels: ['nodename']
         regex: '(engine.master)'
@@ -50,3 +50,4 @@ scrape_configs:
       regex: (.+)
       target_label: __metrics_path__
       replacement: /api/v1/nodes/${1}/proxy/metrics/cadvisor
+
