--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -1,67 +1,39 @@
-# my global config
 global:
-  scrape_interval:     15s # Set the scrape interval to every 15 seconds. Default is every 1 minute.
-  evaluation_interval: 15s # Evaluate rules every 15 seconds. The default is every 1 minute.
-  # scrape_timeout is set to the global default (10s).
+  scrape_interval: 15s
+  evaluation_interval: 15s
 
-# Alertmanager configuration
 alerting:
   alertmanagers:
   - static_configs:
     - targets:
-       - alert-manager-0-2:9093
+       - alert-manager-0-27:9093
 
-# Load rules once and periodically evaluate them according to the global 'evaluation_interval'.
 rule_files:
-   - /opt/bitnami/prometheus/conf/rules.yaml 
+   - /opt/bitnami/prometheus/conf/rules.yaml
    - /opt/bitnami/prometheus/conf/alerts.yaml
 
-# A scrape configuration containing exactly one endpoint to scrape:
-# Here it's Prometheus itself.
 scrape_configs:
-  # The job name is added as a label `job=<job_name>` to any timeseries scraped from this config.
   - job_name: 'prometheus'
     static_configs:
     - targets: ['localhost:9090']
-  - job_name: 'graylog'
-    scrape_interval: 15s
-    metrics_path: '/api/plugins/org.graylog.plugins.metrics.prometheus/metrics'
-    basic_auth:
-      username: admin
-      password: 4FTZOx9ACdbAw65WJH1u
-    # Optional TLS configuration; see https://prometheus.io/docs/operating/configuration/#<tls_config>
-    #tls_config:
-    static_configs:
-      - targets: ['appz.1276c99e.lowtouch.cloud:443/logs.alpha-dev/']
-      
+  
   - job_name: 'node-exporter'
     static_configs:
-    - targets: ['172.31.17.121:9100','172.31.28.19:9100','172.31.25.240:9100','172.31.31.27:9100','172.31.24.133:9100','192.168.184.194:9100','192.168.96.134:9100','192.168.130.193:9100']
+    - targets: ['192.168.184.46:9100', '192.168.184.35:9100', '192.168.184.42:9100', '192.168.1.7:9100']
     metric_relabel_configs:
       - source_labels: ['nodename']
         regex: '(engine.master)'
         target_label: nodename
         replacement: appz-${1}
       - source_labels: ['nodename']
-        regex: 'k8s.(.*)'
+        regex: 'k8s.worker.node.(.*)'
         target_label: nodename
-        replacement: appz-${1}
-      - source_labels: ['nodename']
-        regex: 'ip-192-168-103-189.us-east-2.compute.internal'
-        target_label: nodename
-        replacement: appz-qa-worker-1
-      - source_labels: ['nodename']
-        regex: 'ip-192-168-163-143.us-east-2.compute.internal'
-        target_label: nodename
-        replacement: appz-qa-worker-2
-      - source_labels: ['nodename']
-        regex: 'ip-192-168-130-193.us-east-2.compute.internal'
-        target_label: nodename
-        replacement: appz-prod-worker-1 
+        replacement: appz-dev-worker-${1}
+  
   - job_name: 'kube-state-metrics'
     static_configs:
     - targets: ['kube-state-metrics.kube-system.svc.cluster.local:8080']
-
+    
   - job_name: 'kubernetes-cadvisor'
     scheme: https
     tls_config:
@@ -78,5 +50,3 @@ scrape_configs:
       regex: (.+)
       target_label: __metrics_path__
       replacement: /api/v1/nodes/${1}/proxy/metrics/cadvisor
-      
- 
