--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -50,4 +50,20 @@ scrape_configs:
       regex: (.+)
       target_label: __metrics_path__
       replacement: /api/v1/nodes/${1}/proxy/metrics/cadvisor
+  - job_name: 'blackbox'
+    metrics_path: /probe
+    params:
+     module: [http_2xx] 
+    static_configs:
+    - targets:
+       - https://172.20.22.64:3306
+
+       
+    relabel_configs:
+      - source_labels: [__address__]
+        target_label: __param_target
+      - source_labels: [__param_target]
+        target_label: instance
+      - target_label: __address__
+        replacement: blackbox-exporter-0-2:9115  
       
