--- a/alerts.yaml
+++ b/alerts.yaml
@@ -58,4 +58,37 @@ groups:
     annotations:
       summary: "High CPU load (instance {{ $labels.instance }})"
       description: "CPU load is high\n  VALUE = {{ $value }}\n  LABELS: {{ $labels }}"
+
+  - name: site-down
+    rules:
+      - alert: SiteDown
+        expr: probe_success == 0
+        for: 5m
+        labels:
+          severity: "critical"
+        annotations:
+          summary: "Site {{ $labels.instance }} down"
+          description: "HTTP probe fail"
+
+  - name: status-other-than-200
+    rules:
+      - alert: http-200-fail
+        expr: probe_http_status_code != 200
+        for: 5m
+        labels:
+          severity: critical
+        annotations:
+          summary: "HTTP 200 Fail"
+          description: "HTTP status code other than \"200\" has been returned\n HTTP STATUS {{ $value }}"
+
+  - name: mysql-down
+    rules:
+      - alert: MySQLPortDown
+        expr: probe_success == 0 and on(instance) instance =~ ".*:3306$"
+        for: 2m
+        labels:
+          severity: critical
+        annotations:
+          summary: "MySQL instance down - {{ $labels.instance }}"
+          description: "Blackbox TCP probe failed for MySQL port 3306 on {{ $labels.instance }}"
       
