--- a/prometheus.yaml
+++ b/prometheus.yaml
@@ -65,7 +65,9 @@ scrape_configs:
       - source_labels: [__param_target]
         target_label: instance
       - target_label: __address__
-        replacement: blackbox-exporter-0-2:9115     
+        replacement: blackbox-exporter-0-2:9115
+      - target_label: job
+        replacement: mysql-probe
     
       
       
